--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "whattopair",
   "version": "1.0.0",
+  "engines": {
+    "node": "18.x"
+  },
   "scripts": {
     "start": "npx @11ty/eleventy --serve",
     "build": "npx @11ty/eleventy"
   },
-  "devDependencies": {
-    "@11ty/eleventy": "^2.0.0"
-  }
+  ...
 }
