--- a/package.json
+++ b/package.json
@@ -8,5 +8,7 @@
     "start": "npx @11ty/eleventy --serve",
     "build": "npx @11ty/eleventy"
   },
-  ...
+  "devDependencies": {
+    "@11ty/eleventy": "^2.0.0"
+  }
 }
