--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   },
   "scripts": {
     "start": "npx @11ty/eleventy --serve",
-    "build": "npx @11ty/eleventy"
+    "build": "npx @11ty/eleventy",
+    "postbuild": "npx pagefind"
   },
   "devDependencies": {
-    "@11ty/eleventy": "^2.0.0"
+    "@11ty/eleventy": "^2.0.0",
+    "pagefind": "^1.0.0"
   }
 }
