--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
     "node": "18.x"
   },
   "scripts": {
-    "start": "npx @11ty/eleventy --serve",
-    "build": "npx @11ty/eleventy",
-    "pagefind": "npx pagefind"
-  },
+  "start": "npx @11ty/eleventy --serve",
+  "build": "npx @11ty/eleventy",
+  "pagefind": "npx pagefind --exclude /pagefind"
+}
   "devDependencies": {
     "@11ty/eleventy": "^2.0.0",
     "pagefind": "^1.0.0"
