--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "npx @11ty/eleventy --serve",
     "build": "npx @11ty/eleventy",
-    "pagefind": "npx pagefind --source _site"
+    "pagefind": "npx pagefind --source _site --output-subdir pagefind-build"
   },
   "devDependencies": {
     "@11ty/eleventy": "^2.0.0",
