--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "npx @11ty/eleventy --serve",
     "build": "npx @11ty/eleventy",
-    "pagefind": "npx pagefind --source _site --output-subdir pagefind-build"
+    "pagefind": "npx pagefind --source _site --output-subdir pagefind-build",
+    "postbuild": "node postbuild.js"
   },
   "devDependencies": {
     "@11ty/eleventy": "^2.0.0",
