--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,3 @@
 [build]
-  command = "npm run build && npm run pagefind"
+  command = "npm run build && npm run pagefind && npm run postbuild"
   publish = "_site"
