--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
   },
   "scripts": {
     "start": "npx @11ty/eleventy --serve",
-    "build": "npx @11ty/eleventy",
-    "pagefind": "npx pagefind --source _site --output-subdir pagefind-build",
-    "postbuild": "node postbuild.js"
+    "build": "npx @11ty/eleventy && npx pagefind --source _site --output-subdir pagefind-build && node postbuild.js"
   },
   "devDependencies": {
     "@11ty/eleventy": "^2.0.0",
