--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
     "node": "18.x"
   },
   "scripts": {
-    "start": "npx @11ty/eleventy --serve",
-    "build": "npx @11ty/eleventy && npx pagefind --source _site --output-subdir pagefind-build && node postbuild.js"
-  },
+  "start": "npx @11ty/eleventy --serve",
+  "build": "npx @11ty/eleventy && npx pagefind --site _site --output-subdir pagefind-build && node postbuild.js"
+}
   "devDependencies": {
     "@11ty/eleventy": "^2.0.0",
     "pagefind": "^1.0.0"
