--- a/package.json
+++ b/package.json
@@ -6,10 +6,9 @@
   },
   "scripts": {
     "start": "npx @11ty/eleventy --serve",
-    "build": "npx @11ty/eleventy && npx pagefind --site _site --output-subdir pagefind-build && node postbuild.js"
+    "build": "npx @11ty/eleventy"
   },
   "devDependencies": {
-    "@11ty/eleventy": "^2.0.0",
-    "pagefind": "^1.3.0"
+    "@11ty/eleventy": "^2.0.0"
   }
 }
